[tool.poetry]
name = "arduino-home-assistant-docs"
version = "1.0.0"
description = ""
authors = ["Dawid Chyrzynski <dawid.chyrzynski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
exhale = "^0.3.1"
breathe = "^4.33.1"
sphinx-book-theme = "^0.3.2"
Sphinx = "^4.5.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
